--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <style>
 table {
-    font-family: arial, sans-serif;
+    font-family: Open Sans, arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -37,12 +37,13 @@ tr:nth-child(even) {
           {% endif %}
         {% endfor %}
 </table>
-ghpages fileserver v1.0
-© Karlheinz Niebuhr
+pages-tunnel v1.0
+based on karlheinzniebuhr/ghpages-fileserver    
+© Rebirth-Devs
 
 </body>
 
 <script>
-document.getElementById('path').innerHTML = "Index of " + window.location.pathname;
+document.getElementById('path').innerHTML = "Index of tunnel " + window.location.pathname;
 </script>
 </html>
